--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^3.0.4",
     "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^5.1.0",
     "@fontsource-variable/open-sans": "^5.0.18",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
